Change live demo to be pop up magic.

--- a/Arsha/live-demo/package.json
+++ b/Arsha/live-demo/package.json
@@ -10,6 +10,7 @@
     "make": "electron-forge make"
   },
   "dependencies": {
+    "@electron-forge/maker-dmg": "^6.0.4",
     "electron-squirrel-startup": "^1.0.0",
     "jimp": "^0.16.2"
   },
